@@ -16,6 +16,7 @@ Version 1.4.11 - SVN
   - Fix typo: html/plain should be text/html.
   - Fix en/decode header swith in MDN (#1694687).
   - Fix compatibility with Windows path in administrator plugin (#1740469).
+  - Fix disabling password encryption in mail_fetch (#1738001).
 
 Version 1.4.10a - 10 May 2007
 -----------------------------
